syntax = "proto2";
package netty;
option java_package = "tech.pcloud.proxy.message";
option java_outer_classname = "TransferProto";

enum OperationType {
    HEARTBEAT = 0;
    CONNECT = 1;
    DISCONNECT = 2;
    TRANSFER = 3;
    CLIENT_REGISTER = 4;
    SERVICE_REGISTER = 5;
    SERVICE_SHUTDOWN = 6;
    SERVICE_LIST= 7;
}

enum RequestType {
    REQUEST = 0;
    RESPONSE = 1;
}

message Transfer {
    optional int64 request_id = 1 [default = 0];
    required int64 node_id = 2;
    optional string service_name = 3;
    required OperationType operation = 4;
    optional string signature = 5;
    map<string, string> handler = 6;
    optional bytes data = 7;
    required RequestType type = 8;
}
